Changed launcher method during testing