@@ -5,10 +5,8 @@ import com.example.projectpoker.model.game.Player;
 import com.example.projectpoker.model.game.enums.*;
 import com.example.projectpoker.model.statistics.HandStats;
 import javafx.application.Application;
-import java.util.List;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.Map;
+
+import java.util.*;
 
 public class Launcher {
     public static void main(String[] args) {
@@ -73,15 +71,15 @@ public class Launcher {
         Card SA = new Card(Suit.Spades, Rank.Ace);
 
 
-        ArrayList<Card> Board = (ArrayList<Card>) List.of(DK, DA, H2, S3, CQ);
+        ArrayList<Card> Board = new ArrayList<>(Arrays.asList(DK, DA, H2, S3, CQ));
         List<Card> P1Hand = List.of(HA, D5);
         List<Card> P2Hand = List.of(CJ, H4);
         Player player1 = new Player("test1");
         Player player2 = new Player("test2");
 
         for (int i = 0; i < P1Hand.size(); i++) {
-            player1.addToPlayerHand(P1Hand.get(i));
-            player2.addToPlayerHand(P2Hand.get(i));
+            player1.addCardToHand(P1Hand.get(i));
+            player2.addCardToHand(P2Hand.get(i));
         }
         ArrayList<Player> testPlayers = new ArrayList<>();
         testPlayers.add(player1);
